--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -29,7 +29,7 @@
 /* Phone */
 @media (max-width: 414px) {
     .LandingContainer{
-        padding: 8em 4em 4em 4em;
+        padding: 8em 0em 4em 0em;
         
     }
 }
